# FerrisUnzip

./: .gitignore  ARCHITECTURE.md  CODE_COMPARISON.md  Cargo.toml  EXTRACTION_IMPROVEMENTS.md  GUI_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MIGRATION_SUMMARY.md  PROJECT_STATUS.md  README.md  WINDOWS_INSTALL.md  install_windows.ps1  uninstall_windows.ps1
.github/workflows/: rust-clippy.yml
examples/: basic_usage.rs
src/: config.rs  lib.rs  main.rs  progress.rs  utils.rs
src/extractors/: compression.rs  mod.rs  rar.rs  sevenz.rs  tar.rs  zip.rs
ui/: appwindow.slint
