[package]
name = "Archiver"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
zip = "4.2.0"
sevenz-rust = { version = "0.6.1", features = ["aes256"] }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.6.0"
unrar = "0.5.8"
liblzma = "0.4.1"
slint = "1.9"
rfd = "0.15"

[build-dependencies]
slint-build = "1.9"